[package]
name = "sha3-js-wasm"
version = "0.1.0"
authors = ["Thomas dugue <tdugue@sutunam.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
sha3 = "0.8.2"
hex = "0.3.1"

wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
debug = false
lto = true
opt-level = 3

